RESOLVED FIXED197681
WEBCORE_EXPORT shouldn't be on the class and its methods
https://bugs.webkit.org/show_bug.cgi?id=197681
Summary WEBCORE_EXPORT shouldn't be on the class and its methods
Don Olmstead
Reported 2019-05-07 17:35:32 PDT
ScrollingTreeFrameScrollingNode and ScrollingTreeScrollingNode have WEBCORE_EXPORT on the class and on some of its methods.
Attachments
Patch (2.64 KB, patch)
2019-05-07 17:39 PDT, Don Olmstead
no flags
Archive of layout-test-results from ews213 for win-future (13.80 MB, application/zip)
2019-05-07 20:16 PDT, EWS Watchlist
no flags
Don Olmstead
Comment 1 2019-05-07 17:39:54 PDT
EWS Watchlist
Comment 2 2019-05-07 17:42:36 PDT
Attachment 369341 [details] did not pass style-queue: ERROR: Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h:107: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] ERROR: Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h:108: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3 2019-05-07 20:16:41 PDT
Comment on attachment 369341 [details] Patch Attachment 369341 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12129517 New failing tests: security/contentSecurityPolicy/video-with-file-url-allowed-by-media-src-star.html
EWS Watchlist
Comment 4 2019-05-07 20:16:43 PDT
Created attachment 369353 [details] Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Frédéric Wang Nélar
Comment 5 2019-05-08 08:24:31 PDT
> Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.h: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. So it looks these functions shouldn't have been inline or that WEBCORE_EXPORT shouldn't have been on the class. @smfr: An idea?
Simon Fraser (smfr)
Comment 6 2019-05-08 09:35:55 PDT
I've taken to just ignoring these warnings.
Don Olmstead
Comment 7 2019-05-08 09:48:16 PDT
Comment on attachment 369341 [details] Patch Then r+?
WebKit Commit Bot
Comment 8 2019-05-08 13:32:30 PDT
Comment on attachment 369341 [details] Patch Clearing flags on attachment: 369341 Committed r245066: <https://trac.webkit.org/changeset/245066>
WebKit Commit Bot
Comment 9 2019-05-08 13:32:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2019-05-08 13:33:20 PDT
Note You need to log in before you can comment on or make changes to this bug.