WEBCORE_EXPORT shouldn't be on the class and its methods https://bugs.webkit.org/show_bug.cgi?id=197681

Reviewed by Simon Fraser.

Remove WEBCORE_EXPORT from the methods.

* page/scrolling/ScrollingTreeFrameScrollingNode.h:
* page/scrolling/ScrollingTreeScrollingNode.h:


Canonical link: https://commits.webkit.org/211845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245066 268f45cc-cd09-0410-ab3c-d52691b4dbfc